# Robot-localization-with-GTSAM

./: Dockerfile  README.md  start_container.sh
data/: calculate_lidar_cov.py  error.py  lidar_data.csv  trajectory.csv  trajectory2.csv  trajectory_odom_with_noise.csv  trajectory_odom_with_noise2.csv  trajectory_plot.py  trajectory_plot_1.py
src/robot_localization/: package.xml  setup.py
src/robot_localization/robot_localization/: localization_estimation.py
