<?xml version="1.0"?>
<package format="3">
  <name>robot_localization</name>
  <version>0.0.1</version>
  <description>GTSAM implemetation for robot localization</description>

  <maintainer email="marcin.m.czajka@student.put.poznan.pl">Marcin Czajka</maintainer>
  <license>Apache-2.0</license> 

  <exec_depend>rclpy</exec_depend> 
  <exec_depend>sensor_msgs</exec_depend> 
  <exec_depend>nav_msgs</exec_depend> 
  <exec_depend>geometry_msgs</exec_depend> 
  <exec_depend>visualization_msgs</exec_depend> 
  <exec_depend>numpy</exec_depend> 
  <exec_depend>gtsam</exec_depend> 
  <exec_depend>open3d</exec_depend> 
  <exec_depend>math</exec_depend> 

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
